--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.0",
     "postcss": "^8.4.19",
+    "svelte-fa": "^3.0.3",
     "svelte-spa-router": "^3.3.0",
     "tailwindcss": "^3.2.4"
   }
