--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.0",
+    "dotenv": "^16.0.3",
+    "octokit": "^2.0.10",
     "postcss": "^8.4.19",
     "svelte-fa": "^3.0.3",
     "svelte-spa-router": "^3.3.0",
+    "tailwind-scrollbar": "^2.0.1",
     "tailwindcss": "^3.2.4"
   }
 }
